@@ -3721,6 +3721,7 @@ session_settings
 		bool drop_skipped_requests;
 
 		bool low_prio_disk;
+		int local_service_announce_interval;
 		bool volatile_read_cache;
 		bool guided_read_cache;
 		bool default_min_cache_age;
@@ -4193,6 +4194,11 @@ normally take priority in this mode. This is meant to improve the
 overall responsiveness of the system while downloading in the
 background. For high-performance server setups, this might not
 be desirable.
+
+``local_service_announce_interval`` is the time between local
+network announces for a torrent. By default, when local service
+discovery is enabled a torrent announces itself every 5 minutes.
+This interval is specified in seconds.
 
 ``volatile_read_cache``, if this is set to true, read cache blocks
 that are hit by peer read requests are removed from the disk cache
